# NodeGraphQt

./: .gitignore  pyproject.toml
NodeGraphQt/: constants.py
NodeGraphQt/base/: commands.py  graph.py  menu.py
NodeGraphQt/custom_widgets/: nodes_palette.py  nodes_tree.py
NodeGraphQt/custom_widgets/properties_bin/: custom_widget_value_edit.py  node_property_widgets.py  prop_widgets_base.py
NodeGraphQt/qgraphics/: node_abstract.py  node_backdrop.py  node_base.py  node_overlay_disabled.py  pipe.py  port.py  slicer.py
NodeGraphQt/widgets/: actions.py  dialogs.py  node_widgets.py  scene.py  tab_search.py  viewer.py  viewer_nav.py
docs/examples/: ex_node.rst  ex_overview.rst
docs/graphs/: NodeGraph.rst
docs/host_apps/: ex_app_nuke.rst  ex_app_silhouette.rst
examples/: basic_example.py
