[tool.poetry]
name = "nodegraphqt"
version = "0.1.1"
description = ""
authors = ["Dear <lechadoq@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11, <3.13"
pyside6 = ">=6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
